Finally fixed annoying shift bug
Shifts used to keep offscreen pages displayed so scrollbar could
potentially scroll bar with nothing to see on screen (because scrollable
content was offscreen).

--- a/style.css
+++ b/style.css
@@ -219,6 +219,10 @@ h1.intro-text {
 	/*animation: float 15s ease normal infinite;*/
 }
 
+.shrink {
+	display: none;
+}
+
 .portrait-container {
 	width: 25%;
 	border-radius: 100%;
